fixed logo not visible

--- a/css/style.css
+++ b/css/style.css
@@ -372,8 +372,7 @@ a {
     padding: var(--small-size);
     position: sticky;
     top: 0;
-    z-index: 50;
-    height: 100vh;
+    height: 100%;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
